fixed white space on the footer

--- a/src/index.css
+++ b/src/index.css
@@ -114,6 +114,7 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
@@ -122,4 +123,10 @@
 .difference {
   box-shadow: 0 5px 20px 5px rgba(0, 0, 0, .5);
   text-align: center;
+}
+
+.overflow-stuff {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
